--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "volkswagen",
   "version": "1.2.6",
   "description": "Volkswagen detects when your tests are being run in a CI server, and makes them pass.",
-  "main": "./these/aren't/the/source/files/you're/looking/for.js",
+  "main": "./.these/aren't/the/source/files/you're/looking/for.js",
   "dependencies": {
     "emitter-listener": "^1.0.1",
     "is-ci": "^1.0.4",
