--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "devDependencies": {
     "chai": "^3.3.0",
+    "mocha": "^2.3.3",
     "standard": "^5.3.1",
     "tap": "^2.1.0",
     "tape": "^4.2.1"
   },
   "scripts": {
-    "test": "standard && standard .these/aren\\'t/the/source/files/you\\'re/looking/for.js && find test -type f ! -name '_*' -exec node {} \\;"
+    "test": "standard && standard .these/aren\\'t/the/source/files/you\\'re/looking/for.js && find test -type f ! -name '_*' -exec node {} \\; && npm run mocha",
+    "mocha": "mocha -u bdd mocha/bdd.js; mocha -u tdd mocha/tdd.js; mocha -u exports mocha/exports.js; mocha mocha/require.js"
   },
   "repository": {
     "type": "git",
