--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tape": "^4.2.1"
   },
   "scripts": {
-    "test": "standard && standard .these/aren\\'t/the/source/files/you\\'re/looking/for.js && find test -type f ! -name '_*' -print0 | xargs -0 -n1 -t node"
+    "test": "standard && standard .these/aren\\'t/the/source/files/you\\'re/looking/for.js && find test -type f ! -name '*.js' -print0 | xargs -0 -n1 -t node"
   },
   "repository": {
     "type": "git",
