--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "emitter-listener": "^1.1.1",
     "is-ci": "^1.1.0",
-    "mockery": "^2.1.0"
+    "mockery": "^2.1.0",
+    "node-noop": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
